# InoRtosApps

./: .gitmodules  LICENSE  README.md
ino-rtos/: CMakeLists.txt  Makefile  README.md  sdkconfig.esp32  sdkconfig.esp8266
ino-rtos/main/: CMakeLists.txt  main.cpp
